--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Le gâteau au chocolat</h1>
             <div class="separateur"></div>
             <div class="centre">
-                <p class="description">Cette recette facile du gâteau au chocolat est un grand classique. Il fera plaisir à vous enfants.</p>
+                <p class="description">Cette recette facile du gâteau au chocolat est un grand classique. Il fera plaisir à vos enfants.</p>
             </div>
             <br>
             <div class="info">
